Add API endpoint to get profiles by user ID Added automatic documentation for the whole app
